Addition of basic objects
These objects are the first to represent menu items, an order, coupons, and the like. There is no logic in these objects yet.

The structure of these objects and their namespaces may change. Hell, everything in this commit may change. I'll just have to see how things go.

--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,7 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+# Solution Specific Files
+Gnominos.sln
+Gnominos.Testing*
