--- a/Gnominos/Gnominos.vbproj
+++ b/Gnominos/Gnominos.vbproj
@@ -31,4 +31,8 @@
     <Folder Include="Exceptions\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1-beta1" />
+  </ItemGroup>
+
 </Project>
