--- a/Gnominos/Gnominos.vbproj
+++ b/Gnominos/Gnominos.vbproj
@@ -29,4 +29,9 @@
     <DocumentationFile>Gnominos.xml</DocumentationFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="RestSharp" Version="106.10.1" />
+    <PackageReference Include="RestSharp.Serializers.NewtonsoftJson" Version="106.10.1" />
+  </ItemGroup>
+
 </Project>
