--- a/Gnominos/Gnominos.vbproj
+++ b/Gnominos/Gnominos.vbproj
@@ -4,7 +4,7 @@
     <RootNamespace>Gnominos</RootNamespace>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <OptionStrict>On</OptionStrict>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Authors>thegiggitybyte</Authors>
     <Company>thegiggitybyte</Company>
@@ -12,9 +12,9 @@
     <PackageProjectUrl>https://github.com/Giggitybyte/Gnominos</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Giggitybyte/Gnominos</RepositoryUrl>
     <PackageLicenseUrl>https://github.com/Giggitybyte/Gnominos/blob/development/LICENSE</PackageLicenseUrl>
-    <Version>0.1.0.0</Version>
+    <Version>0.1.0</Version>
     <Description>A .Net Core library for the Dominos API</Description>
-    <Copyright>Copyright © 2018 Luke Triano</Copyright>
+    <Copyright>Copyright © 2020 Luke Triano</Copyright>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
